--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
         }
         table {
             border-spacing: 0;
+            padding: 10px;
         }
         td {
             padding: 0;
+            text-align: left;
+            font-size: 15px;
+            padding-bottom: 10px;
+        }
+
+        tr {
+            max-width: 100%;
         }
        a {
             text-decoration: none;
@@ -57,7 +65,7 @@
                     <td>
                         <table width="100%" style="border-spacing: 0;">
                             <tr>
-                                <td style="background-color: grey; padding: 10px; text-align: center;">
+                                <td style="padding: 10px; text-align: left;">
                                     <h1>An Update from the SDK Support Team |</h1>
                                 </td>
                             </tr>
@@ -83,13 +91,13 @@
                                 </td>
                             </tr>
 
-                            <tr>
-                                <td style="background-color:#FEF0D8">
+                            <tr style="background-color:#FEF0D8">
+                                <td>
                                     <p>
                                         From this point forward, we want to make sure all new SDK Support communication comes through JIRA, 
                                         via our <a href="https://metrological.atlassian.net/servicedesk/customer/portal/1">Metrological SDK Support Help Desk</a>. This will help us increase transparency within the organization 
                                         and better distribute our work load. It will remove dependencies on individual support engineers who now need to check e-mail, 
-                                        Slack, Skype and many other disparate communication channels to confirm they haven’t missed queries. 
+                                        Slack, Skype and many other disparate communication channels to confirm they have not missed queries. 
                                         Most importantly, it will help us provide a quicker, and overall fairer, experience to all the customers and 
                                         external parties who reach out to us, thus leading to increased customer satisfaction.
                                     </p>
@@ -108,14 +116,14 @@
                                 </td>
                             </tr>
 
-                            <tr>
-                                <td style="background-color:#E6F6FD;">
+                            <tr style="background-color:#E6F6FD;">
+                                <td>
                                     <p>
                                         While this change can be scary, we want to assure you that we will continue to work with the same dedication 
-                                        and personalisation as we’ve always done. We will continue to setup calls with our customers and provide 
+                                        and personalisation as we have always done. We will continue to setup calls with our customers and provide 
                                         them step-by-step solutions. We will continue to work with you, our colleagues, in a direct manner to make 
                                         sure we provide appropriate guidance to our customers. That is what we do best, and this is what we want to focus 
-                                        on now that we won’t have to juggle so many communication channels.
+                                        on now that we will not have to juggle so many communication channels.
                                     </p>
                                 </td>
                             </tr>
@@ -123,18 +131,22 @@
                             <tr>
                                 <td>
                                     <p>
-                                        We’ve prepared some e-mail templates to help you redirect customers to our Help Desk, please check <a href="https://metrological.atlassian.net/wiki/spaces/MET/pages/3025141761">this page</a>.
+                                        We have prepared some e-mail templates to help you redirect customers to our Help Desk, please check <a href="https://metrological.atlassian.net/wiki/spaces/MET/pages/3025141761">this page</a>.<br><br>
                                         If you want to find out more about how this will help us, please check <a href="https://metrological.atlassian.net/wiki/spaces/MET/pages/3022684161/SDK+Support+WoW+changes">this page</a>. <br>
 
-                                        If you have any doubts, please don’t hesitate to reach out.<br>
+                                        If you have any doubts, please do not hesitate to reach out.<br><br>
 
                                         Best regards,
                                     </p>
                                 </td>
                             </tr>
-
+                            
                             <tr>
                                 <td><a href="#"><img src="images/Metrological-PNG-Web 1.png"  alt="logo"></a></td>
+                            </tr>
+
+                            <tr>
+                                
                             </tr>
                         </table>
                     </td>
