--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         table {
             border-spacing: 0;
             padding: 10px;
+            align-content: center;
+            width: 100%;
+          
         }
         td {
             padding: 10px;
@@ -65,12 +68,12 @@
 <body>
     <center class="wrapper">
         <div class="webkit">
-            <table class="outer" align="center" style="border: #000000">
+            <table class="outer" style="border: #000000">
                 <tr>
                     <td>
-                        <table width="100%" style="border-spacing: 0;">
+                        <table>
                             <tr>
-                                <td style="padding: 10px; text-align: left;">
+                                <td>
                                     <h1>An Update from the SDK Support Team |</h1>
                                 </td>
                             </tr>
@@ -79,10 +82,10 @@
                 </tr>
             </table>
 
-            <table class="outer" align="center">
+            <table class="outer">
                 <tr>
                     <td>
-                        <table width="100%" style="border-spacing: 0;">
+                        <table>
                             <tr>
                                 <td>
                                     <h2>Dear Colleagues</h2>
@@ -102,10 +105,10 @@
                 </tr>
             </table>
 
-            <table class="outer" align="center">
+            <table class="outer">
                 <tr>
                     <td>
-                        <table width="100%" style="border-spacing: 0; background-color:#FEF0D8">
+                        <table style="background-color:#FEF0D8">
                             <tr>
                                 <td>
                                     <p>
@@ -123,10 +126,10 @@
                 </tr>
             </table>
 
-            <table class="outer" align="center">
+            <table class="outer">
                 <tr>
                     <td>
-                        <table width="100%" style="border-spacing: 0;">
+                        <table>
                             <tr>
                                 <td>
                                     <p>
@@ -144,10 +147,10 @@
             </table>
 
 
-            <table class="outer" align="center">
+            <table class="outer">
                 <tr>
                     <td>
-                        <table width="100%" style="border-spacing: 0; background-color:#E6F6FD;">
+                        <table style="background-color:#E6F6FD;">
                             <tr>
                                 <td>
                                     <p>
@@ -164,10 +167,10 @@
                 </tr>
             </table>
 
-            <table class="outer" align="center">
+            <table class="outer">
                 <tr>
                     <td>
-                        <table width="100%" style="border-spacing: 0;">
+                        <table width="100%">
                             <tr>
                                 <td>
                                     <p>
@@ -185,10 +188,10 @@
                 </tr>
             </table>
               
-            <table class="outer" align="center">
+            <table class="outer">
                 <tr>
                     <td>
-                        <table width="100%" style="border-spacing: 0;">
+                        <table>
                             <tr>
                                 <td>
                                     <a href="https://www.metrological.com/"><img src="images/Metrological-PNG-Web 1.png"  alt="logo"></a>
