Text-align change

--- a/email.html
+++ b/email.html
@@ -14,7 +14,7 @@
         <h2 style="padding-left: 50px;">An Update from the SDK Support Team |</h2>
     </div>
     <div class="outer" style="margin: 0 auto;width: 100%;max-width: 600px;border-spacing: 0;font-family: roboto;color: #000000;">
-        <p style="padding: 50px;">
+        <p style="padding: 50px;text-align: justify;">
             Dear Colleagues <br> <br>
             Metrological has had a fantastic growth in the last few years thanks to the continued efforts
                 of every one of you working in your respective teams. 
@@ -27,7 +27,7 @@
     </div>
     
     <div class="outer hero" style="background-color: #FEF0D8;position: relative;width: 100%;display: flex;background-image: url(images/Metrological-PNG-Web\ 2.png);background-size: contain;background-repeat: no-repeat;background-position: bottom;margin: 0 auto;max-width: 600px;border-spacing: 0;font-family: roboto;color: #000000;">
-        <p style="padding: 50px;">
+        <p style="padding: 50px;text-align: justify;">
             From this point forward, we want to make sure all new SDK Support communication comes through JIRA, 
             via our <a href="https://metrological.atlassian.net/servicedesk/customer/portal/1" style="text-decoration: none;color: #000000;font-weight: bold;">Metrological SDK Support Help Desk</a>. This will help us increase transparency within the organization 
             and better distribute our work load. It will remove dependencies on individual support engineers who now need to check e-mail, 
@@ -39,7 +39,7 @@
     
 
     <div class="outer" style="margin: 0 auto;width: 100%;max-width: 600px;border-spacing: 0;font-family: roboto;color: #000000;">
-        <p style="padding: 50px;">
+        <p style="padding: 50px;text-align: justify;">
             We understand that sometimes customers want to talk to us in Slack or Skype for quick, 
             rapid-fire communication - we will continue to provide that service for selected customers only. 
             In all other cases, we will invite external development teams to join the <a href="https://lightning-community.slack.com/join/shared_invite/zt-f0khi0lt-OXNrRqCfmEWX7jx3F6GaTw#/shared-invite/email" style="text-decoration: none;color: #000000;font-weight: bold;">Lightning Community Slack group</a> 
@@ -49,7 +49,7 @@
     </div>
 
     <div class="outer" style="background-color: #E6F6FD;margin: 0 auto;width: 100%;max-width: 600px;border-spacing: 0;font-family: roboto;color: #000000;">
-        <p style="padding: 50px;">
+        <p style="padding: 50px;text-align: justify;">
             While this change can be scary, we want to assure you that we will continue to work with the same dedication 
             and personalisation as we have always done. We will continue to setup calls with our customers and provide 
             them step-by-step solutions. We will continue to work with you, our colleagues, in a direct manner to make 
@@ -59,7 +59,7 @@
     </div>
 
     <div class="outer" style="margin: 0 auto;width: 100%;max-width: 600px;border-spacing: 0;font-family: roboto;color: #000000;">
-        <p style="padding: 50px;">
+        <p style="padding: 50px;text-align: justify;">
             We have prepared some e-mail templates to help you redirect customers to our Help Desk, please check <a href="https://metrological.atlassian.net/wiki/spaces/MET/pages/3025141761" style="text-decoration: none;color: #000000;font-weight: bold;">this page</a>.<br><br>
             If you want to find out more about how this will help us, please check <a href="https://metrological.atlassian.net/wiki/spaces/MET/pages/3022684161/SDK+Support+WoW+changes" style="text-decoration: none;color: #000000;font-weight: bold;">this page</a>. <br>
 
