--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div class="outer">
         <p>
-            Dear Colleagues <br> <br>
+            Dear Colleagues, <br> <br>
             Metrological has had a fantastic growth in the last few years thanks to the continued efforts
                 of every one of you working in your respective teams. 
                 As we look to the future with confidence, 
